hdf5 storage format, and schema: fixed, table

--- a/lib/pandas.ipynb
+++ b/lib/pandas.ipynb
@@ -1910,7 +1910,7 @@
     "\n",
     "This is a **read_csv, and read_table** optional parameter, that take a dictionary as value.\n",
     "\n",
-    "Its purpose is to apply a **function/mapping f** specified as value to a **key representing the column name, that the function should apply the mapping* to every values in the specified column"
+    "Its purpose is to apply a **function/mapping f** specified as value to a **key representing the column name, that the function should apply the mapping** to every values in the specified column"
    ]
   },
   {
@@ -2276,35 +2276,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 77,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0;31mInit signature:\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDocstring:\u001b[0m     \n",
-      "zip(*iterables, strict=False) --> Yield tuples until an input is exhausted.\n",
-      "\n",
-      "   >>> list(zip('abcdefg', range(3), range(4)))\n",
-      "   [('a', 0, 0), ('b', 1, 1), ('c', 2, 2)]\n",
-      "\n",
-      "The zip object yields n-length tuples, where n is the number of iterables\n",
-      "passed as positional arguments to zip().  The i-th element in every tuple\n",
-      "comes from the i-th iterable argument to zip().  This continues until the\n",
-      "shortest argument is exhausted.\n",
-      "\n",
-      "If strict is true and one of the arguments is exhausted before the others,\n",
-      "raise a ValueError.\n",
-      "\u001b[0;31mType:\u001b[0m           type\n",
-      "\u001b[0;31mSubclasses:\u001b[0m     "
-     ]
-    }
-   ],
    "source": [
-    "zip?"
+    "\n",
+    "---|||\n",
+    "### Binary Data Formats\n",
+    "\n",
+    "One can take data in a different format and store it in binary format, in a process known as serialization\n",
+    "\n",
+    "The reverse is known as deserialization. "
    ]
   },
   {
@@ -2312,28 +2293,480 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# read a csv file and save it in binary format\n",
+    "\n",
+    "f = lambda x: \"NULL\" if not x else x\n",
+    "\n",
+    "df = pd.read_table(\"a.txt\", index_col=['Unnamed: 0'], sep=',', converters={'Name': f})\n",
+    "\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# store it to binary format\n",
+    "\n",
+    "df_bin = df.to_pickle(\"employee_NULL_w-o_header_to_binary\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# load the binary file\n",
+    "\n",
+    "df = pd.read_pickle(\"employee_NULL_w-o_header_to_binary\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---|||\n",
+    "### Storage Formats\n",
+    "\n",
+    "HDF5: Hierachical Data Format\n",
+    "\n",
+    "This is a file format used for **storing large quantities** of scientific array data. \n",
+    "\n",
+    "An HDF5 file can store multiple datasets, and metadata as a key-value pair. Interestingly, it supports the compression of those file, using **a variety of compression modes**, so that data with repeated pattern are stored efficiently."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# store a dataframe in HDF5 format\n",
+    "\n",
+    "# create the dataframe\n",
+    "df = pd.DataFrame({'a': np.random.randn(100)})\n",
+    "\n",
+    "# store as hdf\n",
+    "store = pd.HDFStore('data.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# store the dataframe\n",
+    "\n",
+    "store['obj1'] = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "store['obj1_col'] = df['a']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.io.pytables.HDFStore'>\n",
+      "File path: data.h5\n",
+      "/obj1                frame        (shape->[100,1])\n",
+      "/obj1_col            series       (shape->[100])  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(store.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.245699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.326683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.405154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.338620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.736357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>-0.116920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>-0.420591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>0.437353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>-0.391695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>0.990099</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           a\n",
+       "0  -1.245699\n",
+       "1   0.326683\n",
+       "2  -1.405154\n",
+       "3  -0.338620\n",
+       "4   0.736357\n",
+       "..       ...\n",
+       "95 -0.116920\n",
+       "96 -0.420591\n",
+       "97  0.437353\n",
+       "98 -0.391695\n",
+       "99  0.990099\n",
+       "\n",
+       "[100 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# retrieve the df\n",
+    "\n",
+    "store['obj1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    -1.245699\n",
+       "1     0.326683\n",
+       "2    -1.405154\n",
+       "3    -0.338620\n",
+       "4     0.736357\n",
+       "        ...   \n",
+       "95   -0.116920\n",
+       "96   -0.420591\n",
+       "97    0.437353\n",
+       "98   -0.391695\n",
+       "99    0.990099\n",
+       "Name: a, Length: 100, dtype: float64"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# retreive the data in col a\n",
+    "\n",
+    "store['obj1_col']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---|||\n",
+    "### Storage Schema\n",
+    "\n",
+    "Two schema (i.e. mode of storing data) are supported by HDF5Store;\n",
+    "\n",
+    "- fixed: fast, but doen't support query operations\n",
+    "\n",
+    "- table: slow, but supports query operation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.DataFrame({'b': np.random.randn(40), 'e': np.random.randn(40)})\n",
+    "\n",
+    "store.put('obj2', value=df2, format='table')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>b</th>\n",
+       "      <th>e</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.021936</td>\n",
+       "      <td>-0.729077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>-0.738394</td>\n",
+       "      <td>1.231876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.927187</td>\n",
+       "      <td>-1.120192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>-0.121029</td>\n",
+       "      <td>1.007038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1.172373</td>\n",
+       "      <td>0.689595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.593094</td>\n",
+       "      <td>0.022941</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           b         e\n",
+       "10  0.021936 -0.729077\n",
+       "11 -0.738394  1.231876\n",
+       "12  0.927187 -1.120192\n",
+       "13 -0.121029  1.007038\n",
+       "14  1.172373  0.689595\n",
+       "15  0.593094  0.022941"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# note, if storage schema is \"fixed, then this query operation will fail\n",
+    "store.select('obj2', where=['index >= 10 and index <= 15'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# close the storage\n",
+    "\n",
+    "store.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ClosedFileError",
+     "evalue": "data.h5 file is not open!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mClosedFileError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[108], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# confirm close\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mstore\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mobj1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/pytables.py:595\u001b[0m, in \u001b[0;36mHDFStore.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    594\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key: \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m--> 595\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/pytables.py:794\u001b[0m, in \u001b[0;36mHDFStore.get\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    779\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    780\u001b[0m \u001b[38;5;124;03mRetrieve pandas object stored in file.\u001b[39;00m\n\u001b[1;32m    781\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    789\u001b[0m \u001b[38;5;124;03m    Same type as object stored in file.\u001b[39;00m\n\u001b[1;32m    790\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    791\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m patch_pickle():\n\u001b[1;32m    792\u001b[0m     \u001b[38;5;66;03m# GH#31167 Without this patch, pickle doesn't know how to unpickle\u001b[39;00m\n\u001b[1;32m    793\u001b[0m     \u001b[38;5;66;03m#  old DateOffset objects now that they are cdef classes.\u001b[39;00m\n\u001b[0;32m--> 794\u001b[0m     group \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_node\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    795\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m group \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    796\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo object named \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m in the file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/pytables.py:1500\u001b[0m, in \u001b[0;36mHDFStore.get_node\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1498\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_node\u001b[39m(\u001b[38;5;28mself\u001b[39m, key: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Node \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   1499\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"return the node with the key or None if it does not exist\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1500\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_check_if_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1501\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m key\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m   1502\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m key\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/pytables.py:1629\u001b[0m, in \u001b[0;36mHDFStore._check_if_open\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1627\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_check_if_open\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m   1628\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mis_open:\n\u001b[0;32m-> 1629\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m ClosedFileError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m file is not open!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mClosedFileError\u001b[0m: data.h5 file is not open!"
+     ]
+    }
+   ],
+   "source": [
+    "# confirm close\n",
+    "\n",
+    "store['obj1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# performing the same operation using read_hdf5, and to_hddf. \n",
+    "a = np.arange(20).reshape((10, 2))\n",
+    "\n",
+    "df  = pd.DataFrame(a, columns=['a', 'b'])\n",
+    "\n",
+    "df.to_hdf('rdata.h5', 'obj', format='table')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: [3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_hdf('rdata.h5', 'obj', where= ['index >=3', 'columns = a' ])"
+   ]
   },
   {
    "cell_type": "code",
